--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Hero section -->
     <section class="hero" id="home">
       <div class="hero-content">
-        <h1>Welcome to MetaFlex : Unleashing the Power of Metaprogrammig</h1>
+        <h1>Welcome to MetaFlex</h1>
         <p>
           Streaming your development process with our cutting-edge
           Metaprogrammig platform . Build faster , smartere , and more eficienty
